# divergent-beamsearch

./: .gitignore  README.md  pyproject.toml
src/beamsearch_aligned/: beamsearch.py
src/divergent_beamsearch/: algorithm.py
tests/: test_beamsearch.py
